# FSD

./: .gitignore  CMakeLists.txt  FSD.files  SConstruct  white
.codelite/: FSD.session  FSD.workspace.someone  refactoring.db  valgrind.memcheck.log.xml
src/: FSD.c  FSD.sh  SConstruct  data_drawer.c  data_drawer.h  main.c  mman.c  mman.h  paragen.c  paragen.h  typedefs.h  vinyl.c  vinyl.h  vinyl_disk.c  vinyl_disk.h
